<resources>
    <string name="app_name">QReader</string>

    <string name="library">Library</string>
    <string name="name">Name</string>
    <string name="book">Book</string>
    <string name="last_read">Last Read</string>
    <string name="last_updated">Last Updated</string>
    <string name="chapter">Chapter</string>
    <string name="chapters">Chapters</string>
    <string name="download">Download</string>
    <string name="refresh">Refresh</string>
    <string name="error_refreshing">Failed to refresh new content</string>
    <string name="add_library">Add to Library</string>
    <string name="remove_from_library">Remove from Library</string>
    <string name="completed">Completed</string>
    <string name="more">More</string>
    <string name="sort_by">Sort by</string>
    <string name="filter">Filter</string>
    <string name="browse">Browse</string>
    <string name="search">Search</string>
    <string name="channel_name">Library updates</string>
    <string name="time_out">Server timed out, try again</string>
    <string name="downloader_name">Show download progress</string>
    <string name="update_notification">Application updates</string>
    <string name="index_name">Show current book indexing progress</string>
    <string name="webnovel_url_hint">https://www.webnovel.com/book/lord-of-mysteries_11022733006234505</string>
    <string name="pref_lock_font_scale">lockScaleFactor</string>
    <string name="pref_scale_factor">scaleFactor</string>
    <string name="pref_immersive_mode">enableImmersiveMode</string>
    <string name="pref_line_spacing_multiplier">lineSpacingMultiplier</string>
    <string name="pkey_open_reader">showReaderPreferences</string>
    <string name="pkey_open_network">showNetworkPreferences</string>
    <string name="pkey_open_library">showLibraryPreferences</string>
    <string name="pref_portrait_grid_columns">columnCount</string>
    <string name="pref_use_proxy">useProxy</string>
    <string name="pref_webview_request_timeout">webViewTimeout</string>
    <string name="pkey_open_appearance">showAppearancePreferences</string>
    <string name="pref_night_mode">nightMode</string>
    <string name="pref_library_update_freq">libraryUpdateFrequency</string>
    <string name="worker_library_notification">NotificationService</string>
    <string name="pref_concurrent_requests">concurrentRequests</string>
    <string name="pref_req_connection_timeout">requestConnectionTimeout</string>
    <string name="pref_req_read_timeout">requestReadTimeout</string>
    <string name="pref_req_write_timeout">requestWriteTimeout</string>
    <string name="pref_req_max_host_requests">requestMaxHostRequests</string>
    <string name="pref_req_max_requests">requestMaxRequests</string>
    <string name="pref_disable_webview_cache">disableWebViewCache</string>
    <string name="pref_check_web_novel_update">checkWebNovelOnUpdate</string>
    <string name="pref_landscape_grid_columns">columnCountLandscape</string>

    <string-array name="browse_sort_by">
        <item>Name</item>
        <item>Author</item>
        <item>Rating</item>
        <item>Last Updated</item>
        <item>Completed</item>
    </string-array>
    <string-array name="night_mode_options">
        <item>Disable</item>
        <item>Enable</item>
        <item>Follow System</item>
    </string-array>
    <string-array name="night_mode_options_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="update_freq_options">
        <item>Manual</item>
        <item>Every 12 Hours</item>
        <item>Daily</item>
        <item>Every 2 Days</item>
        <item>Every 3 Days</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="update_freq_options_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>