<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_immersive_mode"
            android:summary="Hide system status bar and navigation"
            android:title="Enable immersive mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Font">
        <SeekBarPreference
            android:defaultValue="10"
            android:key="@string/pref_scale_factor"
            android:max="50"
            android:summary="The current scale applied to the font size"
            android:title="Current scale factor" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Gestures">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_lock_font_scale"
            android:summary="Disable the pinch gesture to change font size"
            android:title="Disable scaling pinch gesture" />
    </PreferenceCategory>

</PreferenceScreen>